--- a/public/.htaccess
+++ b/public/.htaccess
@@ -37,4 +37,4 @@ RewriteRule ^(.*)$ dispatch.fcgi [E=X-HTTP_AUTHORIZATION:%{HTTP:Authorization},Q
 # Example:
 #   ErrorDocument 500 /500.html
 
-ErrorDocument 500 "<h2>Application error</h2>Rails application failed to start properly"
+# ErrorDocument 500 "<h2>Application error</h2>Rails application failed to start properly"
